docs/bobby-browser/v0.3.0/guides/accessibility-snapshot.md
---
documentedVersion: 0.3.0
---

# Accessibility snapshot

The `accessibilitySnapshot` primitive returns a compact accessibility tree for
the current page. Class: **Replayable**. Capability: `browser:mutate` (no
extra nested capability).

## Surfaces

| Surface | How |
|---|---|
| HTTP / TypeScript SDK | `POST /v1/commands` primitive `accessibilitySnapshot` |
| MCP | Flat tool `a11y_snapshot` (or the same primitive via `command_execute`) |

## Request

```ts
await client.submit(
  {
    schemaVersion: 2,
    commandId: crypto.randomUUID(),
    workflowId: crypto.randomUUID(),
    attemptId: crypto.randomUUID(),
    sessionId: session.id,
    pageId: page.id,
    deadline: new Date(Date.now() + 60_000).toISOString(),
    command: {
      kind: "primitive",
      input: {
        kind: "accessibilitySnapshot",
        input: { maxNodes: 256 },
      },
    },
  },
  { idempotencyKey: crypto.randomUUID() },
);
```

MCP: `a11y_snapshot` with `{ sessionId, pageId, maxNodes? }`.

`maxNodes` is optional. Engines default to **256** and clamp to **1…2048**.
When the live tree exceeds the budget, evidence sets `truncated: true`.

## Evidence

Successful outcomes include `Evidence.accessibilitySnapshot`:

```ts
{
  kind: "accessibilitySnapshot",
  pageId: string,
  nodes: AccessibilityNode[],
  truncated: boolean,
}
```

### Node shape

Every node is still a compact `{ role, name, children? }` tree — no DOM
selectors, bounds, raw HTML, or browser backend IDs. Form controls may also
carry structured state (all optional; omitted when unknown):

| Field | Wire | Meaning |
|---|---|---|
| `value` | string | Current control value (redacted when sensitive) |
| `description` | string | Accessible description when present |
| `required` | boolean | Required constraint |
| `disabled` | boolean | Disabled |
| `readOnly` | boolean | Read-only |
| `invalid` | boolean | Currently invalid |
| `checked` | boolean | Checkbox / radio checked state |
| `autocomplete` | string | Autocomplete token |
| `valueMin` / `valueMax` | string | Numeric / range bounds when exposed |
| `target` | `{ role, accessibleName, ordinal? }` | Command-ready semantic target |

Sensitive values (password controls, masked AX values, companion secret
heuristics) serialize as `"[redacted]"` rather than the live contents.

Actionable nodes with a non-empty accessible name include a command-ready
`target`. Unique role/name pairs omit `ordinal`. Repeated pairs receive stable,
zero-based ordinals in accessibility-tree order (the second `Phone` textbox has
`ordinal: 1`). Targets are omitted when the name is redacted.

### Using `target` in commands

**MCP `click` / `type_text` / `upload_files`** — pass the snapshot `target`
with `sessionId` and `pageId`; omit `selector`. `upload_files` also requires
`paths`. A selector is required only on the legacy raw-selector path. See
[MCP tools](../surfaces/mcp-tools.md).

**Unique name (no ordinal)** — intents map cleanly via hints:

```ts
const node = /* AccessibilityNode with target */;
await client.submit(
  fillEnvelope(
    meta,
    "enter phone",
    { kind: "text", text: "555-0100", clearFirst: true },
    {
      role: node.target!.role,
      nearText: { kind: "exact", value: node.target!.accessibleName },
    },
  ),
  { idempotencyKey: crypto.randomUUID() },
);
```

**Duplicate role/name (`ordinal` set)** — `IntentHints` have no ordinal field.
Disambiguate with a primitive whose `TargetSpec` carries the ordinal (no CSS /
backend id required), or pass that same `target` through MCP `type_text` /
`click` without a selector:

```ts
await client.submit(
  {
    schemaVersion: 2,
    commandId: crypto.randomUUID(),
    workflowId: crypto.randomUUID(),
    attemptId: crypto.randomUUID(),
    sessionId: session.id,
    pageId: page.id,
    deadline: new Date(Date.now() + 60_000).toISOString(),
    command: {
      kind: "primitive",
      input: {
        kind: "typeText",
        input: {
          selector: "",
          target: {
            css: null,
            testId: null,
            role: node.target!.role,
            accessibleName: node.target!.accessibleName,
            label: null,
            text: null,
            attributes: {},
            framePath: [],
            shadowPath: [],
            ordinal: node.target!.ordinal ?? null,
            allowBestMatch: false,
          },
          value: "555-0100",
          clearFirst: true,
        },
      },
    },
  },
  { idempotencyKey: crypto.randomUUID() },
);
```

Always verify with command / intent evidence — do not treat the snapshot alone
as postcondition proof.

## Engine notes

- **Chromium** — normalizes Chrome's full accessibility tree; ignored nodes
  are skipped and children re-parented; unnamed generic containers are kept
  only for structure; form properties come from AX attributes.
- **Firefox** — companion extension DOM walker; hidden-aware; form attributes
  and validity-related flags are projected into the same node shape; secret-
  like names/values are redacted.

## Next

- [MCP tools](../surfaces/mcp-tools.md)
- [HTTP API](../surfaces/http-api.md)
- [Intent commands](intents.md) (semantic targeting after inspecting the tree)
- [Troubleshooting](troubleshooting.md)
